--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,31 @@
 body{
     background-color: black;
     text-align: center;
+    font-family: Verdana;
 }
 .main-heading{
     color:white;
-    font-family: Verdana;
+    
     font-size: 50px;
 }
 .link{
     font-size: 16px;
     color: aquamarine;
+}
+
+.second-heading{
+    font-size: 42px;
+    font-weight: 300;
+    color: white;
+}
+.description{
+    font-size: 21px;
+    color: gray;
+}
+.icon{
+    margin-top: 30px;
+}
+.company{
+    color: gray;
+    text-align: right;
 }
